After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720846 - embed: Fix use of g_source_set_name_by_id
embed: Fix use of g_source_set_name_by_id
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-12-20 19:12 UTC by Colin Walters
Modified: 2013-12-20 23:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
embed: Fix use of g_source_set_name_by_id (985 bytes, patch)
2013-12-20 19:12 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2013-12-20 19:12:56 UTC
The compiler was warning us about this one.
Comment 1 Colin Walters 2013-12-20 19:12:57 UTC
Created attachment 264643 [details] [review]
embed: Fix use of g_source_set_name_by_id
Comment 2 Claudio Saavedra 2013-12-20 23:24:10 UTC
Review of attachment 264643 [details] [review]:

Thanks.
Comment 3 Colin Walters 2013-12-20 23:26:15 UTC
Attachment 264643 [details] pushed as 6881e68 - embed: Fix use of g_source_set_name_by_id