embed: Fix use of g_source_set_name_by_id

The compiler was warning us about this one.

https://bugzilla.gnome.org/show_bug.cgi?id=720846